--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   # Utility packages
   http: ^1.2.2
   url_launcher: ^6.3.1
-  geolocator: ^12.0.0
+  geolocator: ^13.0.2
   intl: ^0.20.0
   logger: ^2.5.0
   image_picker: ^1.1.2
@@ -39,6 +39,8 @@ dependencies:
 
   readmore: ^3.0.0
   firebase_core: ^3.4.0
+  lottie: ^3.3.1
+  connectivity_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.2
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
