--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   iconsax: ^0.0.8
 
   readmore: ^3.0.0
-  firebase_core: ^3.4.0
+  firebase_core: ^2.9.0
   lottie: ^3.3.1
-  firebase_auth: ^5.4.1
+  firebase_auth: ^4.4.2
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
