--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   lottie: ^3.3.1
   firebase_auth: ^5.4.1
   cloud_firestore: ^5.6.2
+  firebase_storage: ^12.4.1
+  cached_network_image: ^3.4.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
