--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,17 +78,16 @@ flutter:
   - lib/assets/images/no-image/
   - lib/assets/icons/categories/
 
-  # fonts:
-  #    - family: Poppins
-  #      fonts:
-  #        - asset: fonts/Schyler-Regular.ttf
-  #        - asset: fonts/Schyler-Italic.ttf
-  #          style: italic
-  #    - family: Trajan Pro
-  #      fonts:
-  #        - asset: fonts/TrajanPro.ttf
-  #        - asset: fonts/TrajanPro_Bold.ttf
-  #          weight: 700
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Poppins-Bold.ttf
+          weight: 700
 
   # To add assets to your application, add an assets section, like this:
   # assets:
